devNew/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: githubaction
spec:
  selector:
    matchLabels:
      app: githubaction
  replicas: 1
  template:
    metadata:
      labels:
        app: githubaction
    spec:
      containers:
      - name: githubaction
        image: pmalhotra08/githubaction:1.0
        ports:
        - containerPort: 8080
